# rust_nmea_router

./: .gitignore  APPLICATION_SPECS.md  Cargo.toml  ENVIRONMENTAL_MONITORING.md  LICENSE  LOGGING.md  README.md  README_DATABASE.md  SOURCE_FILTER.md  SYSTEMD_SETUP.md  TRIP_IMPLEMENTATION.md  UDP_BROADCASTER_SPECS.md  config.example.json  config.json  create_environmental_table.sql  install.sh  nmea_router.service  schema.sql  uninstall.sh
migrations/: 003_create_trips_table.sql  004_change_distance_to_nautical_miles.sql
nmea2k/: Cargo.toml  README.md
nmea2k/src/: canbus.rs  lib.rs  message_handler.rs  stream_reader.rs
nmea2k/src/pgns/: mod.rs  nmea2000_date_time.rs  pgn126992.rs  pgn127250.rs  pgn127257.rs  pgn127488.rs  pgn128259.rs  pgn128267.rs  pgn129025.rs  pgn129026.rs  pgn129029.rs  pgn130306.rs  pgn130312.rs  pgn130313.rs  pgn130314.rs
src/: app_metrics.rs  application_state.rs  config.rs  db.rs  environmental_monitor.rs  environmental_status_handler.rs  frame_filter.rs  main.rs  nmea2k.rs  stream_reader.rs  time_monitor.rs  trip.rs  udp_broadcaster.rs  utilities.rs  vessel_monitor.rs  vessel_status_handler.rs
src/pgns/: message.rs  mod.rs  pgn126992.rs  pgn127250.rs  pgn127251.rs  pgn127257.rs  pgn127488.rs  pgn128259.rs  pgn128267.rs  pgn129025.rs  pgn129026.rs  pgn129029.rs  pgn129033.rs  pgn130306.rs  pgn130312.rs  pgn130313.rs  pgn130314.rs
src/web/: api.rs  mod.rs  server.rs
static/: trip_description_form.html  trips.html
