[package]
name = "nmea_router"
version = "0.1.0"
edition = "2024"

[dependencies]
nmea2k = { path = "nmea2k" }
nmea2000 = "0.2.2"
socketcan = "3.0"
mysql = "25.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json", "local-time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset"] }
nix = { version = "0.29", features = ["time"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
approx = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors"] }
world_magnetic_model = "0.4.0"
